src/objects/TriggerControl__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Enables/disables an object trigger based on setting value</description>
    <fields>
        <fullName>Account_Characteristic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account_Characteristic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Payment_Arrangement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Payment Arrangement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIP_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP Contact</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Control</label>
</CustomObject>